Role based Authorization, JUnit 5, yaml